--- a/doc/datakvalNNRRskjema1a.Rmd
+++ b/doc/datakvalNNRRskjema1a.Rmd
@@ -18,8 +18,8 @@ avdRESH <- 0
 ### Ta ut for en avdeling: Velg resh: OUS=109834, Haukeland=102959, St.Olavs=104293, UNN=601032
 shus <- data.frame(resh=c(109834, 102959, 104293, 601032, 0), shusnavn=c('OUS', 'Haukeland', 'St.Olavs', 'UNN', 'alle avdelinger'))
 
-skjema1a <- read.table('P:/MinData/nnrr/DataDump_1a%3aSpørreskjema+før+behandling_2017-09-29.csv', sep=';',
-                              header=T, fileEncoding = 'UTF-8-BOM', stringsAsFactors = F)
+skjema1a <- read.table('I:/nnrr/DataDump_Prod_1a_Spørreskjema+før+behandling_2019-01-30_red.csv', sep=';',
+                              header=T, stringsAsFactors = F)
 
 skjema1a$Hoveddato <- as.POSIXlt(substr(skjema1a$DateOfCompletion, 1, 10), format="%d.%m.%Y")
 skjema1a <- skjema1a[which(skjema1a$Hoveddato >= datoFra & skjema1a$Hoveddato <= datoTil), ]
@@ -57,7 +57,7 @@ Skjema 1a har følgende fordeling av datatyper.
 library(nnrr)
 library(knitr)
 library(printr)
-kodebok1a <- read.table('P:/MinData/nnrr/Kodebok1a.csv', sep=';', header=T, stringsAsFactors=F)
+kodebok1a <- read.table('I:/nnrr/Kodebok1a.csv', sep=';', header=T, stringsAsFactors=F)
 
 tab_1a <- table(kodebok1a$Felttype)[-1]
 tab_1a
@@ -162,15 +162,15 @@ manglerEQ5D <- sum(AntBesvEQ5D<length(TomErLik0Navn[which(substr(TomErLik0Navn, 
 
 UHIvar <- kodebok1a$DataDumpnavn[substr(kodebok1a$DataDumpnavn,1,4)=='UhiQ']
 AntBesvUHI <- apply(skjema1a_bak[, UHIvar], 1, function(x){sum(x!=-1)})
-manglerUHI <- sum(AntBesvUHI < length(UHIvar))/dim(skjema1a_bak)[1]*100
+manglerUHI <- sum(AntBesvUHI < length(UHIvar), na.rm = T)/dim(skjema1a_bak)[1]*100
 
 FabQvar <- kodebok1a$DataDumpnavn[substr(kodebok1a$DataDumpnavn,1,4)=='FabQ']
 AntBesvFabQ <- apply(skjema1a_bak[, FabQvar], 1, function(x){sum(!is.na(x))})
 manglerFabQ <- sum(AntBesvFabQ < length(FabQvar))/dim(skjema1a_bak)[1]*100
 
 TidlBehVar <- kodebok1a$DataDumpnavn[substr(kodebok1a$DataDumpnavn,1,16)=='TreatmentEarlier']
-AntBesvTidlBeh <- apply(skjema1a_bak[, TidlBehVar], 1, function(x){sum(x!=0)})
-manglerTidlBeh <- sum(AntBesvTidlBeh < length(TidlBehVar))/dim(skjema1a_bak)[1]*100
+AntBesvTidlBeh <- apply(skjema1a_bak[, TidlBehVar[-9]], 1, function(x){sum(x!=0)})
+manglerTidlBeh <- sum(AntBesvTidlBeh < length(TidlBehVar[-9]), na.rm = T)/dim(skjema1a_bak)[1]*100
 
 AntBesv <- data.frame(AntBesvODI, AntBesvNDI, AntBesvHSCL, AntBesvEQ5D, AntBesvUHI, AntBesvFabQ, AntBesvTidlBeh)
 # apply(AntBesv, 2, table, useNA='ifany')
@@ -230,7 +230,7 @@ ODItab
 
 ### UHI
 ```{r, echo = FALSE, warning=FALSE}
-ODItab <- as.data.frame(table(AntBesv$AntBesvUHI, useNA = 'ifany'))
+ODItab <- as.data.frame(table(AntBesv$AntBesvUHI))
 ODItab$Andel <- ODItab$Freq/ sum(ODItab$Freq) * 100
 row.names(ODItab) <- ODItab$Var1
 ODItab <- t(ODItab[ , -1])
