--- a/doc/datakvalNNRR_v2.Rmd
+++ b/doc/datakvalNNRR_v2.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "En enkel rapport om utfyllingsgrad av skjema i NNRR"
 author: "Kevin Thon"
-date: "Februar 2019"
+date: "August 2019"
 output:
   word_document: default
   pdf_document: default
@@ -85,19 +85,22 @@ Disse variablene er som regel én av tre typer:
 
 
 ```{r, echo = FALSE, warning=FALSE}
-datoFra <- '2018-01-01'
+datoFra <- '2019-01-01'
 datoTil <- '2019-12-31'
 
-skjema1b <- read.table('I:/nnrr/DataDump_Prod_1b_Registreringsskjema+poliklinikk_2019-01-30.csv', sep=';',
+skjema1b <- read.table('I:/nnrr/DataDump_MRS-PROD_1b_Registreringsskjema+poliklinikk_2020-08-04.csv', sep=';',
                          header=T, fileEncoding = 'UTF-8-BOM', stringsAsFactors = F)
-skjema1a <- read.table('I:/nnrr/DataDump_Prod_1a_Spørreskjema+før+behandling_2019-01-30_red.csv', sep=';',
+skjema1a <- read.table('I:/nnrr/DataDump_MRS-PROD_1a_Spørreskjema+før+behandling_2020-08-04_red.csv', sep=';',
                               header=T, stringsAsFactors = F)
-skjema2 <- read.table('I:/nnrr/DataDump_Prod_2_Spørreskjema+etter+behandling_2019-01-30.csv', sep=';',
+skjema2 <- read.table('I:/nnrr/DataDump_MRS-PROD_2_Spørreskjema+etter+behandling_2020-08-04.csv', sep=';',
                                header=T, fileEncoding = 'UTF-8-BOM', stringsAsFactors = F)
 
 dato_var1a <- as.character(kodebok1a$Variabelnavn)[which(as.character(kodebok1a$Felttype) == 'Dato/tid')]
+dato_var1a <- intersect(dato_var1a, names(skjema1a))
 dato_var1b <- as.character(kodebok1b$Variabelnavn)[which(as.character(kodebok1b$Felttype) == 'Dato/tid')]
+dato_var1b <- intersect(dato_var1b, names(skjema1b))
 dato_var2 <- as.character(kodebok2$Variabelnavn)[which(as.character(kodebok2$Felttype) == 'Dato/tid')]
+dato_var2 <- intersect(dato_var2, names(skjema2))
 skjema1a[, dato_var1a] <- mutate_all(skjema1a[, dato_var1a], funs(as.Date(., format="%d.%m.%Y")))
 skjema1b[, dato_var1b] <- mutate_all(skjema1b[, dato_var1b], funs(as.Date(., format="%d.%m.%Y")))
 skjema2[, dato_var2] <- mutate_all(skjema2[, dato_var2], funs(as.Date(., format="%d.%m.%Y")))
@@ -119,8 +122,11 @@ enum_var1b <- as.character(kodebok1b$Variabelnavn)[which(as.character(kodebok1b$
 # enum_var1b <- c('NeckSurgery', 'PelvisSurgery', 'PrevSickLeave', 'RadiologicalF_Spondylolisthesis', 'RadiologicalF_Scoliosis_Subcategory', 'Treatment_InvidualInterdisciplinary', 'Treatment_GroupInterdisciplinary')
 numerisk_var1b <- as.character(kodebok1b$Variabelnavn)[which(as.character(kodebok1b$Felttype) %in% c('Numerisk (heltall)', 'Numerisk (flyttall)'))]
 boolske_var2 <- as.character(kodebok2$Variabelnavn)[which(as.character(kodebok2$Felttype) == 'Avkrysning')]
+boolske_var2 <- intersect(boolske_var2, names(skjema2))
 enum_var2 <- as.character(kodebok2$Variabelnavn)[which(as.character(kodebok2$Felttype) == 'Enkeltvalg')]
+enum_var2 <- intersect(enum_var2, names(skjema2))
 numerisk_var2 <- as.character(kodebok2$Variabelnavn)[which(as.character(kodebok2$Felttype) %in% c('Numerisk (heltall)', 'Numerisk (flyttall)'))]
+numerisk_var2 <- intersect(numerisk_var2, names(skjema2))
 
 skjema1a[, boolske_var1a] <- apply(skjema1a[, boolske_var1a], 2, as.logical)
 skjema1b[, boolske_var1b] <- apply(skjema1b[, boolske_var1b], 2, as.logical)
